; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_import_string.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_import_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }

@SIZEOF_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.sproto*, i32*)* @import_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @import_string(%struct.sproto* %0, i32* %1) #0 {
  %3 = alloca %struct.sproto*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.sproto* %0, %struct.sproto** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @todword(i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.sproto*, %struct.sproto** %3, align 8
  %10 = getelementptr inbounds %struct.sproto, %struct.sproto* %9, i32 0, i32 0
  %11 = load i32, i32* %5, align 4
  %12 = add nsw i32 %11, 1
  %13 = call i8* @pool_alloc(i32* %10, i32 %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @SIZEOF_LENGTH, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @memcpy(i8* %14, i32* %18, i32 %19)
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %21, i64 %23
  store i8 0, i8* %24, align 1
  %25 = load i8*, i8** %6, align 8
  ret i8* %25
}

declare dso_local i32 @todword(i32*) #1

declare dso_local i8* @pool_alloc(i32*, i32) #1

declare dso_local i32 @memcpy(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
